--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -16,6 +16,11 @@ RUN pip install django-bootstrap3==9.1.0
 RUN pip install mysqlclient==1.3.12
 RUN pip install django-tables2==1.10
 RUN pip install requests==2.19.0 redis
+RUN pip install PyMySQL
+RUN pip install Jinja2==2.11.1
+RUN pip install Flask==1.1.1
+RUN pip install selenium==3.141.0
+
 RUN wget -O /usr/bin/wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh \
     && chmod +x /usr/bin/wait-for-it.sh
 
