--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -20,9 +20,13 @@ RUN pip install PyMySQL
 RUN pip install Jinja2==2.11.1
 RUN pip install Flask==1.1.1
 RUN pip install selenium==3.141.0
+RUN wget --no-check-certificate -O /tmp/phantomjs-2.1.1-linux-x86_64.tar.bz2 https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 && cd /tmp &&  \
+    tar -xf phantomjs-2.1.1-linux-x86_64.tar.bz2 && cp phantomjs-2.1.1-linux-x86_64/bin/phantomjs /usr/bin && rm -rf phantomjs-2.1.1-linux-x86_64*
 
 RUN wget -O /usr/bin/wait-for-it.sh https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh \
     && chmod +x /usr/bin/wait-for-it.sh
+
+RUN apt-get install zip
 
 ENV PYTHONPATH="/docato/src:$PYTHONPATH"
 
