--- a/docker/Dockerfile.preproc
+++ b/docker/Dockerfile.preproc
@@ -1,5 +1,19 @@
-FROM windj007/docato-base
+FROM pavlovma007/docato-base-20200312
+#FROM windj007/docato-base
 
+##############################
+# docker in docker
+#ARG modprobe_path
+RUN apt-get update && apt-get install -yqq ca-certificates 		openssh-client
+RUN echo 'hosts: files dns' > /etc/nsswitch.conf
+ENV DOCKER_CHANNEL=stable
+ENV DOCKER_VERSION=19.03.8
+RUN /bin/sh -c set -eux; 		apkArch="$(uname -m)"; 	case "$apkArch" in 		x86_64) dockerArch='x86_64' ;; 		armhf) dockerArch='armel' ;; 		armv7) dockerArch='armhf' ;; 		aarch64) dockerArch='aarch64' ;; 		*) echo >&2 "error: unsupported architecture ($apkArch)"; exit 1 ;;	esac; 		if ! wget -O docker.tgz "https://download.docker.com/linux/static/${DOCKER_CHANNEL}/${dockerArch}/docker-${DOCKER_VERSION}.tgz"; then 		echo >&2 "error: failed to download 'docker-${DOCKER_VERSION}' from '${DOCKER_CHANNEL}' for '${dockerArch}'"; 		exit 1; 	fi; 		tar --extract 		--file docker.tgz 		--strip-components 1 		--directory /usr/local/bin/ 	; 	rm docker.tgz; 		dockerd --version; 	docker --version
+ENV DOCKER_TLS_CERTDIR=/certs
+RUN mkdir /certs /certs/client && chmod 1777 /certs /certs/client
+#############################
+
+# todo возможно openjdk уже не нужно, как минимум
 RUN apt-get update && \
 	apt-get install -yqq apache2 build-essential cmake \
 		pkg-config libspiro-dev libpng-dev libjpeg-dev \
@@ -7,31 +21,6 @@ RUN apt-get update && \
 		libtool autoconf python python-dev libglib2.0-dev libxml2-dev \
 		gettext libcairo2-dev libpango1.0-dev openjdk-8-jdk supervisor xvfb && \
 	apt-get clean
-RUN wget --no-check-certificate -O /tmp/poppler_data.tar.gz http://poppler.freedesktop.org/poppler-data-0.4.7.tar.gz && \
-	cd /tmp && \
-	tar xfv poppler_data.tar.gz && \
-	cd poppler-data-0.4.7 && \
-	cmake . && \
-	make install
-
-RUN wget --no-check-certificate -O /tmp/poppler.tar.xz http://poppler.freedesktop.org/poppler-0.33.0.tar.xz && \
-	cd /tmp && \
-	tar xfv poppler.tar.xz && \
-	cd poppler-0.33.0 && \
-	./configure --enable-xpdf-headers && \
-	make install
-
-RUN git clone https://github.com/coolwanglu/fontforge.git /tmp/fontforge && \
-	cd /tmp/fontforge && \
-	./bootstrap && \
-	./configure && \
-	make install
-
-RUN git clone git://github.com/coolwanglu/pdf2htmlEX.git /tmp/pdf2htmlEX && \
-	cd /tmp/pdf2htmlEX && \
-	cmake . && make && make install
-
-RUN pip install redis
 
 RUN ldconfig
 
@@ -48,3 +37,4 @@ CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
 
 # RUN mkdir -p /docato/thirdparty/tika/ && \
 #     wget -O /docato/thirdparty/tika/tika http://www.apache.org/dyn/closer.cgi/tika/tika-app-1.18.jar
+
